# cookiecutter-python-app

./: README.md  cookiecutter.json  tox.ini
.github/workflows/: tests.yml
hooks/: post_gen_project.sh
tests/: test_basic.py
{{ cookiecutter.slug }}/: .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  README.md  REUSE.toml  Vagrantfile  pyproject.toml  tox.ini
{{ cookiecutter.slug }}/.github/workflows/: label-when-deployed.yml  main.yml
{{ cookiecutter.slug }}/.reuse/: dep5
{{ cookiecutter.slug }}/.s2i/: environment
{{ cookiecutter.slug }}/changelog.d/: _template.md  get-authors.py
{{ cookiecutter.slug }}/deploy/: {{ cookiecutter.slug }}.wsgi
{{ cookiecutter.slug }}/devel/ansible/: playbook.yml
{{ cookiecutter.slug }}/devel/ansible/roles/core/tasks/: main.yml
{{ cookiecutter.slug }}/devel/ansible/roles/dev/tasks/: main.yml
{{ cookiecutter.slug }}/docs/: conf.py  contributing.rst  index.rst  release_notes.md
{{ cookiecutter.slug }}/tests/: app_config.py  conftest.py  test_healthz.py  test_root.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/: __init__.py  app.py  cli.py  config.py  database.py  defaults.py  l10n.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/migrations/: alembic.ini  env.py  script.py.mako
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/migrations/versions/: initial.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/models/: __init__.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/templates/: index.html  main.html  profile.html
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/translations/: messages.pot
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/utils/: __init__.py  healthz.py
{{ cookiecutter.slug }}/{{ cookiecutter.pkg_name }}/views/: __init__.py  root.py
