[tool.poetry]
name = "{{ cookiecutter.slug }}"
version = "0.1.0"
description = "{{ cookiecutter.name }}"

license = "GPL-3.0-or-later"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = "README.md"
keywords = ["fedora"]
repository = "{{ cookiecutter.github_url }}"
homepage = "{{ cookiecutter.url }}"
documentation = "{{ cookiecutter.docs_url }}"

include = [
    { path = "tox.ini", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "*.example", format = "sdist" },
{% if cookiecutter.with_i18n %}
    { path = "babel.cfg", format = "sdist" },
{% endif %}
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.0.2"
{% if cookiecutter.with_sqlalchemy -%}
sqlalchemy-helpers = ">=0.12.1"
{%- endif %}
{% if cookiecutter.with_cli -%}
click = "^8.1.3"
{%- endif %}
{% if cookiecutter.with_i18n -%}
Babel = "^2.10.0"
{%- endif %}
sphinx = {version = ">=4.0", optional = true}
myst-parser = {version = ">=0.16", optional = true}
sphinxcontrib-napoleon = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.10.0"
ruff = ">=0.1.1"
coverage = {extras = ["toml"], version = ">=7.0.0"}
diff-cover = ">=8.0.0"
liccheck = ">=0.6"
pre-commit = ">=2.13"

[tool.poetry.extras]
docs = ["sphinx", "myst-parser", "sphinxcontrib-napoleon"]

{% if cookiecutter.with_cli -%}
[tool.poetry.scripts]
"{{ cookiecutter.slug }}" = "{{ cookiecutter.pkg_name }}.cli:main"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]
"{{ cookiecutter.pkg_name }}/__init__.py" = ["F401"]
"changelog.d/get-authors.py" = ["S602", "S603", "S607"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.pkg_name }}"]

[tool.coverage.paths]
source = ["{{ cookiecutter.pkg_name }}"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Don't complain if tests don't hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "{{ cookiecutter.pkg_name }}/__init__.py",
    {%- if cookiecutter.with_sqlalchemy %}
    "{{ cookiecutter.pkg_name }}/migrations/env.py",
    {% endif -%}
    "tests/*",
]


[tool.towncrier]
package = "{{ cookiecutter.slug }}"
filename = "docs/release_notes.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/_template.md"
title_format = "## Version [{version}]({{ cookiecutter.github_url }}/tree/{version}) - {project_date}"
issue_format = "{issue}"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
