[project]
name = "{{ cookiecutter.slug }}"
version = "0.1.0"
description = "{{ cookiecutter.name }}"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Fedora Infrastructure", email = "admin@fedoraproject.org" }]
keywords = ["fedora"]
dynamic = ["classifiers"]
dependencies = [
    "pydantic-settings (>=2.0.2,<3.0.0)",
{% if cookiecutter.with_sqlalchemy -%}
    "sqlalchemy-helpers (>=2.0.0,<3.0.0)",
{%- endif %}
{% if cookiecutter.with_cli -%}
    "click (>=8.1.3,<9.0.0)",
{%- endif %}
{% if cookiecutter.with_i18n -%}
    "Babel (>=2.10.0,<3.0.0)",
{%- endif %}
{% if cookiecutter.with_flask -%}
    "flask (>=3.0.0,<4.0.0)",
    "flask-wtf (>=0.14.3,<2.0.0)",
    "flask-healthz (>=1.0.0,<2.0.0)",
    "flask-talisman>=0.8.0",
    "whitenoise (>=5.3,<7.0)",
    "gunicorn>=20.0.0",
{% if cookiecutter.with_i18n -%}
    "flask-babel (>=4.0.0,<5.0.0)",
{%- endif %}
{%- endif %}
]

{% if cookiecutter.with_cli -%}
[project.scripts]
"{{ cookiecutter.slug }}" = "{{ cookiecutter.pkg_name }}.cli:main"
{%- endif %}

# [project.optional-dependencies]

[project.urls]
repository = "{{ cookiecutter.github_url }}"
homepage = "{{ cookiecutter.url }}"
documentation = "{{ cookiecutter.docs_url }}"

[tool.poetry]
include = [
    "tox.ini",
    "tests",
    "docs",
    "*.example",
{% if cookiecutter.with_i18n %}
    "babel.cfg",
{% endif %}
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
{% if cookiecutter.with_flask -%}
    "Environment :: Web Environment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
{% endif %}
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.10.0"
ruff = ">=0.1.1"
coverage = {extras = ["toml"], version = ">=7.0.0"}
diff-cover = ">=8.0.0"
liccheck = ">=0.6"
poetry-plugin-export = "^1.8.0"
towncrier = ">=21.3.0"
pre-commit = ">=2.13"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0"
myst-parser = ">=0.16"
sphinxcontrib-napoleon = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]
"{{ cookiecutter.pkg_name }}/__init__.py" = ["F401"]
"changelog.d/get-authors.py" = ["S602", "S603", "S607"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.pkg_name }}"]

[tool.coverage.paths]
source = ["{{ cookiecutter.pkg_name }}"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Don't complain if tests don't hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "{{ cookiecutter.pkg_name }}/__init__.py",
    {%- if cookiecutter.with_sqlalchemy %}
    "{{ cookiecutter.pkg_name }}/migrations/env.py",
    {% endif -%}
    "tests/*",
]


[tool.towncrier]
package = "{{ cookiecutter.pkg_name }}"
filename = "docs/release_notes.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/_template.md"
title_format = "## Version [{version}]({{ cookiecutter.github_url }}/tree/{version}) - {project_date}"
issue_format = "{issue}"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
